[gd_scene load_steps=5 format=2]

[ext_resource path="res://Experience/ExperienceSentinel.gd" type="Script" id=1]
[ext_resource path="res://Experience/ExperienceSentinelChild.gd" type="Script" id=2]
[ext_resource path="res://Experience/SentinelMat.tres" type="Material" id=3]

[sub_resource type="SphereMesh" id=2]
material = ExtResource( 3 )

[node name="Sentinel" type="Spatial"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
script = ExtResource( 1 )

[node name="SentinelChild3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35036, 0, 0 )
mesh = SubResource( 2 )
script = ExtResource( 2 )

[node name="SentinelChild1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.269803, 1.61478, -4.28852 )
mesh = SubResource( 2 )
script = ExtResource( 2 )

[node name="SentinelChild2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.96357, 0.96667, 2.8547 )
mesh = SubResource( 2 )
script = ExtResource( 2 )
